--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
+jwt.header=Authorization
+jwt.secret=mySuperSecretKey1234567890123456
+jwt.expiration=604800
+
